Перед внесением правок в дроплисты

--- a/www/community.html
+++ b/www/community.html
@@ -114,7 +114,7 @@
                   <a href="#" class="b-filter__switch-item text bold" data-filter-category="posts">Новые</a>
                 </div>
                 <div class="b-filter__find">
-                  <input type="text" name="search">
+                  <input type="text" name="search" placeholder="Введите марку или модель авто...">
                 </div>
               </div>
 
