--- a/www/company.html
+++ b/www/company.html
@@ -336,7 +336,7 @@
 
           <!-- Класс m-filter__switch-item_active - выбранный фильтр -->
           <section class="l-filter col xs-3">
-            <div id="float-bar">
+            <div class="aside-panel-wrapp">
 
               <div class="block b-add-post">
                 <h5>Хотите стать ближе к своим клиентам? тогда присоединяйтесь к нашему сообществу!</h5>
@@ -427,6 +427,7 @@
               </div>
             </div>
 
+          </div>
           </section>
 
         </div>
