--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -131,13 +131,13 @@
                         <a href="#" class="text subtext tag">Колеса</a>
                         <a href="#" class="text subtext tag">диски</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Kyiv</p>
+                      <p class="b-ad__item-info-city text subtext">Kyiv</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>20</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item" data-top-item>
@@ -154,13 +154,13 @@
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Athens</p>
+                      <p class="b-ad__item-info-city text subtext">Athens</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>200</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item">
@@ -175,13 +175,13 @@
                       <p class="wrap-tags">
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Kyiv</p>
+                      <p class="b-ad__item-info-city text subtext">Kyiv</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>5</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item">
@@ -198,13 +198,13 @@
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Athens</p>
+                      <p class="b-ad__item-info-city text subtext">Athens</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>2000</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item">
@@ -221,13 +221,13 @@
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Barcelonaaaaaa</p>
+                      <p class="b-ad__item-info-city text subtext">Barcelonaaaaaa</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>300</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item">
@@ -243,13 +243,13 @@
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Barcelona</p>
+                      <p class="b-ad__item-info-city text subtext">Barcelona</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>1500</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item">
@@ -266,13 +266,13 @@
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Athens</p>
+                      <p class="b-ad__item-info-city text subtext">Athens</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>2050</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
@@ -286,13 +286,13 @@
                       <p class="wrap-tags">
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Kyiv</p>
+                      <p class="b-ad__item-info-city text subtext">Kyiv</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>5</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item">
@@ -311,13 +311,13 @@
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Kyiv</p>
+                      <p class="b-ad__item-info-city text subtext">Kyiv</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>20000</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <div class="b-ad__item item">
@@ -334,13 +334,13 @@
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
                       </p>
-                      <p class="b-ad__item-info-city text">Barcelonaaaaaa</p>
+                      <p class="b-ad__item-info-city text subtext">Barcelonaaaaaa</p>
                       </div>
                   </div>
                   <div class="b-ad__item-price text">
                     <span>300</span> <span>$</span>
                   </div>
-                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
+<!--                   <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p> -->
                 </div>
 
                 <!-- 
@@ -362,84 +362,86 @@
 
           <section class="l-filter col xs-3">
 
-            <div class="block b-add-ad">
-              <h5>Хотите продать свой товар? Это просто!</h5>
-              <a href="add-new-ad.html" title="" class="button middle add-button">Добавить обьявление</a>
-            </div>
+            <div class="aside-panel-wrapp">
+              <div class="block b-add-ad">
+                <h5>Хотите продать свой товар? Это просто!</h5>
+                <a href="add-new-ad.html" title="" class="button middle add-button">Добавить обьявление</a>
+              </div>
 
-            <div class="block b-filter">
-              <div class="b-filter-wrapp">
-                <h4><span class="all-ad">256</span> обьявлений</h4>
-                <p class="text"><a href="#">12</span> новых</a></p>
-                <form class="b-filter__form" name="filter">
-                  <div class="b-filter__form-item droplist">
-                    <input type="text" id="sector" value="all" hidden>
-                    <span class="droplist-current text bold tab-input">Категории</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Колесо</li>
-                      <li class="droplist-item text">Авто</li>
-                      <li class="droplist-item text">Диски</li>
-                    </ul>
-                  </div>
-                  <div class="b-filter__form-item droplist">
-                    <input type="text" id="city" value="all" hidden>
-                    <span class="droplist-current text bold tab-input">Все марки</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                      <li class="droplist-item text">Марка</li>
-                    </ul>
-                  </div>
-                  <div class="b-filter__form-item droplist">
-                    <input type="text" id="driver" value="all" hidden>
-                    <span class="droplist-current text bold tab-input">Все модели</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                      <li class="droplist-item text">Модель</li>
-                    </ul>
-                  </div>
-                  <div class="b-filter__form-item droplist">
-                    <input type="text" id="driver" value="all" hidden>
-                    <span class="droplist-current text bold tab-input">Сортировать по</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">От дешевого к дорогому</li>
-                      <li class="droplist-item text">От дорогого к дешевому</li>
-                      <li class="droplist-item text">Город</li>
-                    </ul>
-                  </div>
-                  <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
-                </form>
+              <div class="block b-filter">
+                <div class="b-filter-wrapp">
+                  <h4><span class="all-ad">256</span> обьявлений</h4>
+                  <p class="text"><a href="#">12</span> новых</a></p>
+                  <form class="b-filter__form" name="filter">
+                    <div class="b-filter__form-item droplist">
+                      <input type="text" id="sector" value="all" hidden>
+                      <span class="droplist-current text bold tab-input">Категории</span>
+                      <ul class="droplist-block">
+                        <li class="droplist-item text">Колесо</li>
+                        <li class="droplist-item text">Авто</li>
+                        <li class="droplist-item text">Диски</li>
+                      </ul>
+                    </div>
+                    <div class="b-filter__form-item droplist">
+                      <input type="text" id="city" value="all" hidden>
+                      <span class="droplist-current text bold tab-input">Все марки</span>
+                      <ul class="droplist-block">
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                        <li class="droplist-item text">Марка</li>
+                      </ul>
+                    </div>
+                    <div class="b-filter__form-item droplist">
+                      <input type="text" id="driver" value="all" hidden>
+                      <span class="droplist-current text bold tab-input">Все модели</span>
+                      <ul class="droplist-block">
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                        <li class="droplist-item text">Модель</li>
+                      </ul>
+                    </div>
+                    <div class="b-filter__form-item droplist">
+                      <input type="text" id="driver" value="all" hidden>
+                      <span class="droplist-current text bold tab-input">Сортировать по</span>
+                      <ul class="droplist-block">
+                        <li class="droplist-item text">От дешевого к дорогому</li>
+                        <li class="droplist-item text">От дорогого к дешевому</li>
+                        <li class="droplist-item text">Город</li>
+                      </ul>
+                    </div>
+                    <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
+                  </form>
+                </div>
               </div>
             </div>
 
