--- a/www/my-page.html
+++ b/www/my-page.html
@@ -200,9 +200,10 @@
         <div class="row">
           <section class="l-property col xs-12 sm-9">
             <div class="block b-property redact-block">
+              <h3>Характеристики</h3>
               <div class="b-property-wrapp">
-                <h3>Характеристики</h3>
-
+            <!-- Основные характеристики -->
+                <h4>Общие характеристики</h4>
                 <div class="b-property-string">
                   <h6>Марка</h6>
                   <p class="text">Nissan</p>
@@ -243,7 +244,82 @@
                   <p class="text">6 л/км</p>
                 </div>
 
+            <!-- Замеры -->
+                <h4>Замеры</h4>
+
+                <div class="b-property-string">
+                  <h6>Динамика 0-100, c</h6>
+                  <p class="text">5</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Динамика 0-400, c</h6>
+                  <p class="text">40</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Расход по городу, л/км</h6>
+                  <p class="text">11</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Смешанный расход, л/км</h6>
+                  <p class="text">8</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Расход по трассе, л/км</h6>
+                  <p class="text">5</p>
+                </div>
+
+            <!-- Доработки -->
+                <h4>Доработки</h4>
+
+                <div class="b-property-string">
+                  <h6>Чип</h6>
+                  <p class="text">FGTech Galletto 2 Master</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Выхлоп</h6>
+                  <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Впуск</h6>
+                  <p class="text">CTS Turbo</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Акустика</h6>
+                  <p class="text">Pioneer TS-A1733i</p>
+                </div>
+
+            <!-- Планируемые доработки -->
+                <h4>Планируемые доработки</h4>
+
+                <div class="b-property-string">
+                  <h6>Чип</h6>
+                  <p class="text">FGTech Galletto 2 Master</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Выхлоп</h6>
+                  <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Впуск</h6>
+                  <p class="text">CTS Turbo</p>
+                </div>
+
+                <div class="b-property-string">
+                  <h6>Акустика</h6>
+                  <p class="text">Pioneer TS-A1733i</p>
+                </div>
+
               </div>
+              
             </div>
           </section>
         </div>
@@ -309,33 +385,27 @@
                 </div>
 
                 <div class="b-comments-container pagin-container pagin-wrap">
-
-                  <div class="b-comments-item item">
-                    <div class="b-comments-title">
-                      <div class="b-comments-title-user">
-                        <img src="img/temp/logo-user-1.png" alt="">
-                        <a href="#" class="text">Alen</a>
+                    <div class="b-comments-item item">
+                      <img src="img/temp/logo-user-1.png" alt="">
+                      <div class="b-comments-block">
+                        <p class="b-comments-block-title">
+                          <a href="#" class="text">Alen</a>
+                          <span class="text subtext data">03.10.2016</span>
+                        </p>
+                        <p class="b-comments-text text">Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить. Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить.</p>
                       </div>
-                      <p class="text subtext data">03.10.2016</p>
                     </div>
-                    
-                    <p class="b-comments-text text">
-                      Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить
-                    </p>
-                  </div>
 
-                  <div class="b-comments-item item">
-                    <div class="b-comments-title">
-                      <div class="b-comments-title-user">
-                        <img src="img/temp/logo-user-24.png" alt="">
-                        <a href="#" class="text">Alen</a>
+                    <div class="b-comments-item item">
+                      <img src="img/temp/logo-user-24.png" alt="">
+                      <div class="b-comments-block">
+                        <p class="b-comments-block-title">
+                          <a href="#" class="text">Alen</a>
+                          <span class="text subtext data">15.08.2016</span>
+                        </p>
+                        <p class="b-comments-text text">Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))</p>
                       </div>
-                      <p class="text subtext data">15.08.2016</p>
                     </div>
-                    <p class="b-comments-text text">
-                      Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))
-                    </p>
-                  </div>
 
                 </div>
 
