--- a/www/one-company-page.html
+++ b/www/one-company-page.html
@@ -110,7 +110,6 @@
                 <div class="b-one-company__title-note">
                   <p class="b-one-company__tag text subtext"><a href="#" title="Sector" class="tag">Мойки</a></p>
                   <h1 id="nameCompany">Рога и копыта</h1>
-                  <span class="b-one-company__rating">2335</span>
                   <p class="b-one-company__short-about lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorem eius deserunt libero distinctio, iusto illum repellendus commodi unde, dolores facere repudiandae. Nisi unde blanditiis sunt porro officiis, nostrum et!</p>
                 </div>
                 <img src="img/temp/logo-company/1.svg" alt="" class="b-one-company__title-logo">
@@ -264,30 +263,25 @@
                   <div class="b-comments-container pagin-container pagin-wrap">
 
                     <div class="b-comments-item item">
-                      <div class="b-comments-title">
-                        <div class="b-comments-title-user">
-                          <img src="img/temp/logo-user-1.png" alt="">
+                      <img src="img/temp/logo-user-1.png" alt="">
+                      <div class="b-comments-block">
+                        <p class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
-                        </div>
-                        <p class="text subtext data">03.10.2016</p>
+                          <span class="text subtext data">03.10.2016</span>
+                        </p>
+                        <p class="b-comments-text text">Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить. Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить.</p>
                       </div>
-                      
-                      <p class="b-comments-text text">
-                        Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить
-                      </p>
                     </div>
 
                     <div class="b-comments-item item">
-                      <div class="b-comments-title">
-                        <div class="b-comments-title-user">
-                          <img src="img/temp/logo-user-24.png" alt="">
+                      <img src="img/temp/logo-user-24.png" alt="">
+                      <div class="b-comments-block">
+                        <p class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
-                        </div>
-                        <p class="text subtext data">15.08.2016</p>
+                          <span class="text subtext data">15.08.2016</span>
+                        </p>
+                        <p class="b-comments-text text">Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))</p>
                       </div>
-                      <p class="b-comments-text text">
-                        Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))
-                      </p>
                     </div>
 
                   </div>
