--- a/www/one-item-news.html
+++ b/www/one-item-news.html
@@ -184,32 +184,27 @@
 
                 <div class="b-comments-container pagin-container pagin-wrap">
 
-                  <div class="b-comments-item item">
-                    <div class="b-comments-title">
-                      <div class="b-comments-title-user">
-                        <img src="img/temp/logo-user-1.png" alt="">
-                        <a href="#" class="text">Alen</a>
+                    <div class="b-comments-item item">
+                      <img src="img/temp/logo-user-1.png" alt="">
+                      <div class="b-comments-block">
+                        <p class="b-comments-block-title">
+                          <a href="#" class="text">Alen</a>
+                          <span class="text subtext data">03.10.2016</span>
+                        </p>
+                        <p class="b-comments-text text">Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить. Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить.</p>
                       </div>
-                      <p class="text subtext data">03.10.2016</p>
                     </div>
-                    
-                    <p class="b-comments-text text">
-                      Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить
-                    </p>
-                  </div>
 
-                  <div class="b-comments-item item">
-                    <div class="b-comments-title">
-                      <div class="b-comments-title-user">
-                        <img src="img/temp/logo-user-24.png" alt="">
-                        <a href="#" class="text">Alen</a>
+                    <div class="b-comments-item item">
+                      <img src="img/temp/logo-user-24.png" alt="">
+                      <div class="b-comments-block">
+                        <p class="b-comments-block-title">
+                          <a href="#" class="text">Alen</a>
+                          <span class="text subtext data">15.08.2016</span>
+                        </p>
+                        <p class="b-comments-text text">Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))</p>
                       </div>
-                      <p class="text subtext data">15.08.2016</p>
                     </div>
-                    <p class="b-comments-text text">
-                      Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))
-                    </p>
-                  </div>
 
                 </div>
 
